--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
+    "@intlify/unplugin-vue-i18n": "^1.5.0",
     "vite": "^5.0.0",
     "vue": "^3.4.0"
   },
   "dependencies": {
-    "vue": "^3.4.0"
+    "vue": "^3.4.0",
+    "vue-i18n": "^9.0.0"
   }
 }
