--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "KoBox",
-  "version": "0.1",
+  "version": "0.2",
   "description": "Find Optimal Checkout Combinations",
   "permissions": [
     "activeTab",
@@ -26,16 +26,13 @@
       "128": "dist/icons/icon-128.png"
     }
   },
+  "background": {
+    "service_worker": "dist/background.js"
+  },
   "content_scripts": [
     {
       "matches": ["https://www.kobo.com/*/wishlist*"],
       "js": ["dist/content.js"]
-    }
-  ],
-  "web_accessible_resources": [
-    {
-      "resources": ["/dist/popup.html"],
-      "matches": ["https://www.kobo.com/*"]
     }
   ]
 }
