--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "幫助使用者快速將 KOBO 願望清單中的書籍找出適合結帳的組合",
   "main": "index.js",
   "scripts": {
-    "dev": "vite build --watch",
-    "build": "vite build",
+    "dev": "vite build --mode development --watch",
+    "build": "vite build --mode production",
     "preview": "vite preview"
   },
   "devDependencies": {
